fix: DO NOT display loading spin always

--- a/zeppelin-web/src/app/jobmanager/jobmanager.html
+++ b/zeppelin-web/src/app/jobmanager/jobmanager.html
@@ -123,7 +123,7 @@ limitations under the License.
       <job note="note"></job>
     </div>
   </div>
-  <div ng-if="isLoadingFilter === false && filteredJobs.length <= 0"
+  <div ng-if="isFilterLoaded === false && filteredJobs.length <= 0"
        class="paragraph-col">
     <div class="job-space box job-margin text-center">No Job found</div>
   </div>
