--- a/zeppelin-web/src/app/notebook/notebook.css
+++ b/zeppelin-web/src/app/notebook/notebook.css
@@ -334,31 +334,13 @@
 .noteAction.headroom--unpinned { top: -100px; }
 .noteAction.headroom--pinned { top: 50px; /** `noteAction` top */ }
 
-.search-group input.no-match {
-  border: 1px solid red;
-  box-shadow: none;
-}
-
-.search-group .input-group-addon {
-  min-width: 64px;
-}
-
 .search-group input,
 .search-group .input-group-addon,
 .search-group .input-group-btn .btn {
   border-radius: 0;
 }
 
-.search-dropdown {
-  border-radius: 0;
-  padding: 0;
-}
-
-.search-dropdown li {
-  margin: 0;
-}
-
-.search-group input.no-match {
+#findInput.no-match {
   border-left: 1px solid red !important;
   border-top: 1px solid red !important;
   border-bottom: 1px solid red !important;
@@ -370,19 +352,22 @@
   border-bottom: 1px solid red !important;
 }
 
+#findInput.has-match {
+  border-right: none;
+}
+
 .search-group .input-group-addon {
   min-width: 64px;
 }
 
-.search-group input,
-.search-group .input-group-addon,
 .search-group .input-group-btn .btn {
-  border-radius: 0;
+  border-left-width: 0;
 }
 
 .search-dropdown {
   border-radius: 0;
   padding: 0;
+  border-width: 0;
 }
 
 .search-dropdown li {
@@ -405,7 +390,6 @@
   padding-left: 0;
 }
 
-#findInput {
-  border-right: none;
-  padding-right: 5px;
+.search-group:nth-child(even) {
+  border-top-width: 0;
 }
