--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.html
@@ -29,7 +29,7 @@ limitations under the License.
            ng-blur="setTitle(paragraph); input.showEditor = false"
            ng-enter="setTitle(paragraph); input.showEditor = false"
            focus-if="input.showEditor" />
-    <div ng-click="input.showEditor = !asIframe && !reportMode && !viewOnly && !revisionView; oldTitle = paragraph.title;"
+    <div ng-click="input.showEditor = !asIframe && !reportMode && !revisionView; oldTitle = paragraph.title;"
          ng-show="!input.showEditor"
          ng-bind-html="paragraph.title || 'Untitled'">
     </div>
