search shortcut changed to ctrl-opt-f(ctrl-alt-f)

--- a/zeppelin-web/src/app/notebook/shortcut.html
+++ b/zeppelin-web/src/app/notebook/shortcut.html
@@ -312,7 +312,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">F</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">F</kbd>
               </div>
             </td>
           </tr>
