--- a/zeppelin-web/src/app/notebook/notebook.html
+++ b/zeppelin-web/src/app/notebook/notebook.html
@@ -93,7 +93,7 @@ limitations under the License.
           <select id="selectRunners" multiple="multiple">
             <option is-select2="false" ng-repeat="runners in permissions.runners" selected="selected">{{runners}}</option>
           </select>
-          Writers can read, run and write the note.
+            Runners can read and run the note.
         </p>
         <p><span class="readers">Readers </span>
           <select id="selectReaders" multiple="multiple">
