ZEPPELIN-2904 Show Remove Paragraph button upfront Semantically correct markup

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.css
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.css
@@ -189,6 +189,10 @@
   padding: 4px;
 }
 
+.paragraph .control button {
+  border: 0;
+}
+
 .paragraph .control li {
   font-size: 12px;
   margin-bottom: 4px;
