Changed remove icon to trash

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
@@ -103,8 +103,8 @@ limitations under the License.
         ng-click="removeParagraph(paragraph)"
         ng-hide="$last"
         tooltip-placement="top"
-        uib-tooltip="Remove Paragraph Ctrl+{{ isMac ? 'Option' : 'Alt'}}+D">
-      <i class="fa fa-remove"></i>
+        uib-tooltip="Remove Paragraph (Ctrl+{{ isMac ? 'Option' : 'Alt'}}+D)">
+      <i class="icon-trash"></i>
     </button>
 
     <div class="dropdown" style="display: inline-block;">
