New Icons for more dropdown

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
@@ -114,7 +114,7 @@ limitations under the License.
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="true">
-        <i class="fa fa-ellipsis-h"></i>
+        <i class="icon-more-dropdown"></i>
       </button>
 
       <ul class="dropdown-menu dropdown-menu-right" role="menu" style="width:270px; z-index:1002">
