--- a/zeppelin-web/src/app/notebook/notebook.html
+++ b/zeppelin-web/src/app/notebook/notebook.html
@@ -124,7 +124,8 @@ limitations under the License.
         actiononchange="actionOnFormSelectionChange"
         forms="note.noteForms"
         params="note.noteParams"
-        action="saveNoteForms"></dynamic-forms>
+        action="saveNoteForms"
+        removeaction="removeNoteForms"></dynamic-forms>
     </div>
   </div>
 
