--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -143,6 +143,12 @@ limitations under the License.
             </div>
           </li>
         </ul>
+        <button type="button"
+                class="btn btn-default btn-xs"
+                ng-click="toggleRevisionsComparator()"
+                tooltip-placement="bottom" uib-tooltip="Compare revisions">
+          <i class="fa fa-exchange"></i>
+        </button>
       </div>
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-default btn-xs revisionName" title="{{currentRevision}}">
