New Font with remove and more icon

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
@@ -104,7 +104,7 @@ limitations under the License.
         ng-hide="$last"
         tooltip-placement="top"
         uib-tooltip="Remove Paragraph (Ctrl+{{ isMac ? 'Option' : 'Alt'}}+D)">
-      <i class="icon-trash"></i>
+      <i class="zi-remove"></i>
     </button>
 
     <div class="dropdown" style="display: inline-block;">
@@ -114,7 +114,7 @@ limitations under the License.
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="true">
-        <i class="icon-more-dropdown"></i>
+        <i class="zi-circle-ellipsis"></i>
       </button>
 
       <ul class="dropdown-menu dropdown-menu-right" role="menu" style="width:270px; z-index:1002">
