- Removed more icon css - Last para remove logic as per master branch

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
@@ -101,7 +101,7 @@ limitations under the License.
     <button
         class="btn btn-default btn-xs"
         ng-click="removeParagraph(paragraph)"
-        ng-hide="$last"
+        ng-if="note.paragraphs.length > 1"
         tooltip-placement="top"
         uib-tooltip="Remove Paragraph (Ctrl+{{ isMac ? 'Option' : 'Alt'}}+D)">
       <i class="zi-remove"></i>
