[ZEPPELIN-3035] : Updating the pull request to incorporate review comments

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -60,6 +60,7 @@
                 <li class="title"><span>Other Features</span></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/publishing_paragraphs.html">Publishing Paragraphs</a></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/personalized_mode.html">Personalized Mode</a></li>
+                <li><a href="{{BASE_PATH}}/usage/other_features/multiple_result_copies.html">Multiple Result Copies </a></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/customizing_homepage.html">Customizing Zeppelin Homepage</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>REST API</span></li>
