--- a/zeppelin-web/src/app/home/home.html
+++ b/zeppelin-web/src/app/home/home.html
@@ -17,12 +17,7 @@ limitations under the License.
       <div class="zeppelin2"></div>
     </div>
     <div style="margin-top: -380px;">
-      <h1 class="box-heading" id="welcome">
-        Welcome to Zeppelin!
-      </h1>
-      Zeppelin is web-based notebook that enables interactive data analytics.<br/>
-      You can make beautiful data-driven, interactive, collaborative document with SQL, code and even more!<br/>
-
+      <div ng-include="header"></div>
       <div class="row">
         <div class="col-md-4" ng-if="ticket">
           <h4>Notebook
