--- a/zeppelin-web/src/app/home/notebook.html
+++ b/zeppelin-web/src/app/home/notebook.html
@@ -28,7 +28,7 @@ limitations under the License.
        <ul id="notebook-names">
          <li class="filter-names" ng-include="'components/note-name-filter/note-name-filter.html'"></li>
          <div ng-if="!query.q || query.q === ''" infinite-scroll="loadMoreNotes()">
-           <li ng-repeat="node in home.notes.root.children | limitTo:home.numberOfNotesDisplayed | orderBy:node:false:home.arrayOrderingSrv.noteComparator track by $index"
+           <li ng-repeat="node in home.notes.root.children | limitTo:home.numberOfNotesDisplayed track by $index"
                ng-include src="'app/home/notebook-template.html'" ng-class="note_folder_renderer"></li>
          </div>
          <div ng-if="query.q" infinite-scroll="loadMoreNotes()">
