--- a/zeppelin-web/src/app/tabledata/pivot_settings.html
+++ b/zeppelin-web/src/app/tabledata/pivot_settings.html
@@ -49,11 +49,7 @@ limitations under the License.
             data-drop="true" jqyoui-droppable="{multiple:true, onDrop:'save()'}"
             class="list-unstyled"
             style="border-radius: 6px; margin-top: 7px;">
-          <li ng-repeat="item in config.keys track by $index"
-              ng-model="config.keys"
-              data-drag="true"
-              jqyoui-draggable="{index: {{$index}}, animate: false}"
-              data-jqyoui-options="{revert: 'invalid', placeholder: 'keep', helper: 'clone'}">
+          <li ng-repeat="item in config.keys">
             <div class="btn btn-default btn-xs"
                  style="background-color: #EFEFEF; margin: 2px 0px 0px 2px;">
               {{item.name}}
@@ -73,11 +69,7 @@ limitations under the License.
             jqyoui-droppable="{multiple:true, onDrop:'save()'}"
             class="list-unstyled"
             style="border-radius: 6px; margin-top: 7px;">
-          <li ng-repeat="item in config.groups track by $index"
-              ng-model="config.groups"
-              data-drag="true"
-              jqyoui-draggable="{index: {{$index}}, animate: false}"
-              data-jqyoui-options="{revert: 'invalid', placeholder: 'keep', helper: 'clone'}">
+          <li ng-repeat="item in config.groups">
             <div class="btn btn-default btn-xs"
                  style="background-color: #EFEFEF; margin: 2px 0px 0px 2px;">
               {{item.name}}
@@ -97,11 +89,7 @@ limitations under the License.
             jqyoui-droppable="{multiple:true, onDrop:'save()'}"
             class="list-unstyled"
             style="border-radius: 6px; margin-top: 7px;">
-          <li ng-repeat="item in config.values track by $index"
-              ng-model="config.values"
-              data-drag="true"
-              jqyoui-draggable="{index: {{$index}}, animate: false}"
-              data-jqyoui-options="{revert: 'invalid', placeholder: 'keep', helper: 'clone'}">
+          <li ng-repeat="item in config.values">
             <div class="btn-group">
               <div class="btn btn-default btn-xs dropdown-toggle"
                    style="background-color: #EFEFEF;"
