[ZEPPELIN-2517]&[ZEPPELIN-465] logic change

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
@@ -146,7 +146,7 @@ limitations under the License.
                   style="position: relative; transform: rotate(-90deg); left: -4px;">
             </span>
             <span class="shortcut-keys">Ctrl+{{ isMac ? 'Option' : 'Shift'}}+Enter</span>
-            Run: from first to this
+            Run all above
           </a>
         </li>
         <li>
@@ -155,7 +155,7 @@ limitations under the License.
                   style="position: relative; transform: rotate(-90deg); left: -4px;">
             </span>
             <span class="shortcut-keys">Ctrl+{{ isMac ? 'Option' : 'Shift'}}+Enter</span>
-             Run: from this to last
+             Run current and all below
           </a>
         </li>
         <li>
