--- a/zeppelin-web/src/app/notebook/shortcut.html
+++ b/zeppelin-web/src/app/notebook/shortcut.html
@@ -39,7 +39,7 @@ limitations under the License.
 
           <tr>
             <td>
-              <div class="col-md-8">Run: from first/this to this/last</div>
+              <div class="col-md-8">Run all above/below</div>
             </td>
             <td>
               <div class="keys">
