[Zeppelin-2517]&[Zeppelin-465] line reduction

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
@@ -155,7 +155,7 @@ limitations under the License.
                   style="position: relative; transform: rotate(-90deg); left: -4px;">
             </span>
             <span class="shortcut-keys">Ctrl+{{ isMac ? 'Option' : 'Shift'}}+Enter</span>
-             Run current and all below
+             Run all below
           </a>
         </li>
         <li>
