[ZEPPELIN-2517]&[ZEPPELIN-465] fix shortcut description

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
@@ -145,7 +145,7 @@ limitations under the License.
             <span class="icon-action-redo shortcut-icon"
                   style="position: relative; transform: rotate(-90deg); left: -4px;">
             </span>
-            <span class="shortcut-keys">Ctrl+{{ isMac ? 'Option' : 'Shift'}}+Enter</span>
+            <span class="shortcut-keys">Ctrl+Shift+Enter</span>
             Run all above
           </a>
         </li>
@@ -154,7 +154,7 @@ limitations under the License.
             <span class="icon-action-undo shortcut-icon"
                   style="position: relative; transform: rotate(-90deg); left: -4px;">
             </span>
-            <span class="shortcut-keys">Ctrl+{{ isMac ? 'Option' : 'Shift'}}+Enter</span>
+            <span class="shortcut-keys">Ctrl+Shift+Enter</span>
              Run all below
           </a>
         </li>
