[ZEPPELIN-3095] fix UI when paragraphs run sequential

--- a/zeppelin-web/src/app/notebook/notebook.html
+++ b/zeppelin-web/src/app/notebook/notebook.html
@@ -150,6 +150,7 @@ limitations under the License.
        -->
     <div class="new-paragraph"
          ng-click="insertNew('above')"
+         ng-if="!isSequentialRun()"
          ng-hide="viewOnly || asIframe || revisionView"
          ng-class="{'first-paragraph': $first}">
       <h4 class="plus-sign">&#43; Add Paragraph</h4>
@@ -161,7 +162,9 @@ limitations under the License.
          ng-hide="currentParagraph.config.tableHide && viewOnly"
          ng-dblclick="paragraphOnDoubleClick(currentParagraph.id);">
     </div>
-    <div class="new-paragraph last-paragraph" ng-click="insertNew('below');" ng-hide="!$last || viewOnly || asIframe || revisionView">
+    <div class="new-paragraph last-paragraph" ng-click="insertNew('below');"
+         ng-if="!isSequentialRun()"
+         ng-hide="!$last || viewOnly || asIframe || revisionView">
       <h4 class="plus-sign">&#43; Add Paragraph</h4>
     </div>
   </div>
