--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -65,7 +65,7 @@ limitations under the License.
               ng-hide="viewOnly"
               tooltip-placement="bottom" uib-tooltip="Clone this note" data-source-note-name="{{note.name}}"
               data-toggle="modal" data-target="#noteCreateModal" data-clone="true"
-              ng-disabled="revisionView || isSequentialRun()">
+              ng-disabled="revisionView">
         <i class="fa fa-copy"></i>
       </button>
       <button type="button"
