[Zeppelin-3095] transfer of progress status check to ng-hide

--- a/zeppelin-web/src/app/notebook/notebook.html
+++ b/zeppelin-web/src/app/notebook/notebook.html
@@ -150,8 +150,7 @@ limitations under the License.
        -->
     <div class="new-paragraph"
          ng-click="insertNew('above')"
-         ng-if="!isSequentialRun()"
-         ng-hide="viewOnly || asIframe || revisionView"
+         ng-hide="viewOnly || asIframe || revisionView || isSequentialRun()"
          ng-class="{'first-paragraph': $first}">
       <h4 class="plus-sign">&#43; Add Paragraph</h4>
     </div>
@@ -163,8 +162,7 @@ limitations under the License.
          ng-dblclick="paragraphOnDoubleClick(currentParagraph.id);">
     </div>
     <div class="new-paragraph last-paragraph" ng-click="insertNew('below');"
-         ng-if="!isSequentialRun()"
-         ng-hide="!$last || viewOnly || asIframe || revisionView">
+         ng-hide="!$last || viewOnly || asIframe || revisionView || isSequentialRun()">
       <h4 class="plus-sign">&#43; Add Paragraph</h4>
     </div>
   </div>
