--- a/zeppelin-web/src/app/notebook/notebook.html
+++ b/zeppelin-web/src/app/notebook/notebook.html
@@ -150,9 +150,9 @@ limitations under the License.
        -->
     <div class="new-paragraph"
          ng-click="insertNew('above')"
-         ng-hide="viewOnly || asIframe || revisionView || isSequentialRun()"
+         ng-hide="viewOnly || asIframe || revisionView"
          ng-class="{'first-paragraph': $first}">
-      <h4 class="plus-sign">&#43; Add Paragraph</h4>
+      <h4 class="plus-sign" ng-class="{'new-paragraph-disable': isSequentialRun()}">&#43; Add Paragraph</h4>
     </div>
     <div id="{{currentParagraph.id}}_paragraphColumn"
          ng-include src="'app/notebook/paragraph/paragraph.html'"
@@ -162,8 +162,8 @@ limitations under the License.
          ng-dblclick="paragraphOnDoubleClick(currentParagraph.id);">
     </div>
     <div class="new-paragraph last-paragraph" ng-click="insertNew('below');"
-         ng-hide="!$last || viewOnly || asIframe || revisionView || isSequentialRun()">
-      <h4 class="plus-sign">&#43; Add Paragraph</h4>
+         ng-hide="!$last || viewOnly || asIframe || revisionView">
+      <h4 class="plus-sign" ng-class="{'new-paragraph-disable': isSequentialRun()}">&#43; Add Paragraph</h4>
     </div>
   </div>
   <div style="clear:both;height:10px"></div>
