--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -248,6 +248,18 @@ limitations under the License.
         </button>
       </span>
 
+      <span class="labelBtn" style="vertical-align:middle; display:inline-block;">
+        <button type="button"
+                class="btn btn-default btn-xs"
+                ng-hide="viewOnly"
+                ng-show="collaborativeMode"
+                tooltip-placement="bottom" uib-tooltip="This note is viewed not only by you"
+                ng-disabled="revisionView"
+                style="background-color: rgba(0,151,255,0.36)">
+          <i class="icon-eye"></i>
+        </button>
+      </span>
+
       <span ng-hide="viewOnly">
       <div class="labelBtn btn-group">
         <div class="btn btn-default btn-xs dropdown-toggle"
